test/Fail/Issue6651-UnivSort-PropOmega.err
Issue6651-UnivSort-PropOmega.agda:15.5-6: error: [UnequalTypes]
The types
  univSort _7
and
  Propω
are not equal
when checking that the solution _7 of metavariable _5 has the
expected type Propω
